--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MY game Website</title>
+    <title>My game Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,15 +14,19 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="Discord">Discord</a></li>
+                <li><a href="Game">Game</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home">
         <h2>Home</h2>
-        <p>This is the Horror Run  website!</p>
+        <p>This is the Horror Run website!</p>
 
     </section>
+        <h2>Game</h2>
+        <p>This is the game link: <a href="https://gib123455.itch.io/horun">Game</a></p>
+
 
     <section id="Discord">
         <h2>Discord</h2>
