--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="Discord">Discord</a></li>
-                <li><a href="Game">Game</a></li>
+                <li><a href="Discord"></a><a href="https://discord.gg/SYSTgpr3">Discord</a></p>
+                <li><a href="Game"></a><a href="https://gib123455.itch.io/horror-run">Game</a></p>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
 
     </section>
         <h2>Game</h2>
-        <p>This is the game link: <a href="https://gib123455.itch.io/horun">Game</a></p>
+        <p>This is the game link: <a href="https://gib123455.itch.io/horror-run">Game</a></p>
 
 
     <section id="Discord">
