--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Horror-Run-Website</h1>
+        <h1>Welcome to Horror Run Website</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
